# strip_podcast

./: .gitignore  COPYING  Makefile  README.textile  cmdline.ggo  configure.ac  strip_podcast.cpp
src/: Makefile.am  cmdline.ggo  strip_podcast.cpp
